--- a/templates/contact.html
+++ b/templates/contact.html
@@ -76,7 +76,7 @@
       </div>
 
       <!-- Submit button -->
-      <button type="submit" class="btn btn-primary btn-block mb-3">Sign in</button>
+      <button type="submit" class="btn btn-primary btn-block mb-3">Submit</button>
     </form>
   </div>
 
